platform/management-gateway-config/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: k8s-playground
spec:
  hostnames:
    - grafana.k8s-playground.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: k8s-playground-management-gateway
      namespace: istio-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
